# health-app

./: .gitignore  README.md
airflow_app/: airflow.cfg  pyproject.toml
airflow_app/dags/: usda_dag.py
airflow_app/scripts/: generate_secret_key.py
docker/: Dockerfile.flask  README.md  docker-compose.yaml
docker/postgres/: Dockerfile.postgres  docker-entrypoint.sh
flask_app/: .env  README.md  pyproject.toml
flask_app/app/: __init__.py  models.py
flask_app/migrations/versions/: 80c147f83512_initial_migration.py  cf5feee3de64_.py  ed93022b479f_initial_migration.py  ef41bb0b0c76_add_usda_food_nutrient_data.py
postgres_db/: docker-compose.yaml
